welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
  if (a%5 == 0){
    if (res == ""){
      return "Buzz";
    }
    else{
      return "Fizz Buzz";
    }
  }
  return ""+a
}
  